assets/css/parts/single.css
/**
 * Post header.
 */
.entry-header {
    text-align: center;
    margin: 50px 0;
}
.post-header {
    margin-bottom: 40px;
    z-index: 20;
    position: relative;
    background-repeat: no-repeat;
    background-position: center;
    background-blend-mode: multiply;
    background-color: var(--color-box-shadow);
    background-size: cover;
    background-attachment: fixed;
    color: var(--color-white);
}

.post-header-overlay {
    background-color: rgba(0, 0, 0, 0.5);
    height: 400px;
}

.entry-title {
    font-family: var(--font-family-primary);
    font-weight: var(--font-weight-bolder);
    margin-bottom: 0;
    padding-top: 0;
}

.entry-excerpt p {
    color: var(--color-gray);
    font-size: var(--font-size-l);
    width: 80%;
    margin: 10px auto;
}

.entry-category span {
    text-transform: capitalize;
    padding: 6px 14px;
    border-radius: 16px;
    font-size: var(--font-size-s);
    font-weight: var(--font-weight-bold);
    background-color: var(--color-secondary);
    color: var(--color-black);
}

.entry-meta {
    font-size: var(--font-size-m);
    color: var(--color-gray);
}

.entry-date {
    margin-top: 25px;
    padding-bottom: 5px;
}

@media only screen and (min-width: 992px) {

}

/**
 * Author.
 */
.author {
    text-align: center;
    font-size: var(--font-size-s);
    font-family: var(--font-family-secondary);
}

.author-container {
    justify-content: center;
    align-items: center;
    text-align: left;
    margin-top: 30px;
}

.author-image {
    margin: 10px 20px;
}

.author-name {
    font-weight: var(--font-weight-bold);
}

.author-description {
    margin-top: 6px;
}

/**
 * Toc on titles.
 */
.entry-content h2,
.entry-content h3 {
    position: relative;
}

.toc_ref {
    display: none;
    position: absolute;
    bottom: -5px;
    left: -40px;
}

@media only screen and (min-width: 1100px) {
    .entry-content .toc_ref {
        display: block;
        color: var(--color-gray);
        opacity: 0.2;
        padding-bottom: 4px;
    }
}

@media only screen and (min-width: 992px) {
    .entry-content .toc_ref:hover {
        color: var(--color-black);
        opacity: 1;
    }
}

/**
 * Comment.
 */
.link-comment img {
    margin-left: 5px;
}

.entry-content .link-comment a {
    color: var(--color-black);
    font-style: italic;
    padding-bottom: 2px;
    border-bottom: 2px solid var(--color-secondary);
}

.entry-content .link-comment a:hover {
    font-weight: bold;
}

/**
 * Yoast FAQ.
 */
.schema-faq-question {
    font-size: var(--font-size-h4);
    padding-top: 60px;
    display: block;
}

.schema-faq-answer br {
    display: block;
    margin-bottom: 20px;
}

/**
 * Embed.
 */
.is-provider-youtube iframe {
    width: 100%;
}


@media only screen and (min-width: 786px) {
    .is-provider-youtube iframe {
        height: 500px;
    }
}

/**
 * Back to the top.
 */
.back-to-top {
    width: 30px;
    height: 30px;
    position: fixed;
    bottom: 20px;
    right: 30px;
    opacity: 0.6;
}

@media only screen and (min-width: 786px) {
    .back-to-top {
        width: 60px;
        height: 60px;
    }
}

/**
 * Sticky share.
 */
.entry-share {
    display: none;
    z-index: 10;
}

@media only screen and (min-width: 1200px) {
    .entry-share {
        display: block;
        max-width: var(--container-max-width);
        margin: 0 auto;
    }
}

.link-share {
    top: 230px;
    position: fixed;
    white-space: nowrap;
    margin: 50px 0 30px 0;
    font-weight: var(--font-weight-bold);
}

.link-share-buttons {
    display: flex;
    flex-direction: column;
}

.link-share-buttons .social-icons {
    display: inline-flex;
    padding: 15px;
    flex-direction: column;
    border-radius: var(--radius-strong);
}

.link-share-buttons .social-icons button {
    margin: 10px 0;
    opacity: 0.6;
}

.link-share-buttons .social-icons button:hover {
    opacity: 1;
}

.link-share button {
    background: transparent;
    border: none;
}

.link-share img {
    margin: 0 3px;
}

.link-share svg:hover {
    fill: var(--color-black);
}

